@@ -108,14 +108,11 @@ $output .= ' <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "htt
 <html> 
 		<head>
                 <title>'.$_lang['DM_module_title'].'</title> 
-<script type="text/javascript">var MODX_MEDIA_PATH = "media";</script>
 		<link rel="stylesheet" type="text/css" href="media/style' . $theme . '/style.css" /> 
 		<link rel="stylesheet" type="text/css" href="media/style' . $theme . '/coolButtons2.css" /> 
 	    <link rel="stylesheet" type="text/css" href="media/style' . $theme . '/tabs.css"/> 
 		<script type="text/javascript" src="media/script/scriptaculous/prototype.js"></script> 
 		<script type="text/javascript" src="media/script/scriptaculous/scriptaculous.js"></script> 
-	    <script type="text/javascript" src="media/script/modx.js"></script> 
-		<script type="text/javascript" src="media/script/cb2.js"></script> 
 		<script type="text/javascript" src="media/script/tabpane.js"></script>  
         <script type="text/javascript" src="../assets/modules/docmanager/js/functions.js"></script>
         <script type="text/javascript" src="media/script/datefunctions.js"></script>
