@@ -111,7 +111,7 @@ if($manager_language!="english" && file_exists($modx->config['base_path']."manag
 }
 
 ?>
-<script language="JavaScript">
+<script type="text/javascript">
 
 function changestate(element) {
 	documentDirty=true;
@@ -542,7 +542,7 @@ if(is_array($_POST['user_groups'])) {
 <div class="sectionHeader"><?php echo $_lang['web_access_permissions']; ?></div><div class="sectionBody">
 <?php
 	echo $_lang['access_permissions_user_message']."<p />";
-	$sql = "SELECT name, id FROM $dbase.".$table_prefix."webgroup_names";
+	$sql = "SELECT name, id FROM $dbase.".$table_prefix."webgroup_names ORDER BY name";
 	$rs = mysql_query($sql);
 	$limit = mysql_num_rows($rs);
 	for($i=0; $i<$limit; $i++) {
